Fix padding in video listing and properly account for the scrollbar and page resizes.

--- a/uclient/src/app/videos/videos.scss
+++ b/uclient/src/app/videos/videos.scss
@@ -3,6 +3,8 @@
 .videos {
   display: flex;
   flex-wrap: wrap;
+  box-sizing: border-box;
+  width: 100%;
 
   header {
     display: flex;
